<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="8dp"
        tools:context=".activities.CarDetectorActivity">

        <ImageView
            android:id="@+id/ivImage"
            android:layout_width="match_parent"
            android:layout_height="256dp"
            android:layout_margin="16dp"
            android:src="@drawable/ic_launcher" />


        <Button
            android:id="@+id/bScan"
            style="@style/BaseButton"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_gravity="center"
            android:layout_margin="8dp"
            android:layout_marginTop="20dp"
            android:text="@string/scan" />

        <Button
            android:id="@+id/bAll"
            style="@style/BaseButton"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_gravity="center"
            android:layout_margin="8dp"
            android:layout_marginTop="20dp"
            android:text="@string/show_all_cars" />

        <Button
            android:id="@+id/bAbout"
            style="@style/BaseButton"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_gravity="center"
            android:layout_margin="8dp"
            android:text="@string/about" />

    </LinearLayout>

</ScrollView>